# controllers/auth/logout.js
@@ -1,8 +1,11 @@
-const userModel = require('../../models/schemas/user')
+const userModel = require("../../models/schemas/user");
 
 async function logout(req, res) {
-    await userModel.findByIdAndUpdate(req.user.id, { token: null })
-    res.status(204).end()
+  await userModel.findByIdAndUpdate(req.user.id, {
+    accessToken: null,
+    refreshToken: null,
+  });
+  res.status(204).end();
 }
 
-module.exports = logout
+module.exports = logout;
